[STUDIO-2123] fix blue rectangle overlap with URL bar

--- a/front_end/screencast/screencastView.css
+++ b/front_end/screencast/screencastView.css
@@ -33,6 +33,7 @@
 }
 
 .screencast-navigation {
+    z-index: 5;
     flex-direction: row;
     display: flex;
     flex: 40px 0 0;
